--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leetcode-hot100-ts",
+  "name": "dj-code-practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
